# PixWit

./: .gitattributes  .gitignore  BingSiteAuth.xml  CMakeLists.txt  DEPLOY_NGINX_SSL.md  DEPLOY_TO_SERVER.md  README.md  README_DEPLOY_CN.md  README_EN.md  README_WEB.md  USER_GUIDE.md  baidu_verify_codeva-acQNBA3AmM.html  config.json  latest.json  nginx_ssl.conf  package-lock.json  package.json  rename_images.py  resources.qrc  sitemap.xml  start_server.sh  update_pixwit.sh
.github/workflows/: deploy.yml
.vitepress/theme/: index.ts  style.css
docs/: USER_GUIDE.html  USER_GUIDE.md  download.md  index.md  latest.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  index.ts  style.css
docs/.vitepress/theme/components/: Breadcrumb.vue  Community.vue  Download.vue  Features.vue  Hero.vue
docs/guide/: ai_analysis_guide.md  faq.md  image.md  index.md  installation.md  ocr.md  recording.md  screenshot-hist.md  screenshot.md  shortcuts.md  table_extraction_guide.md  tips.md  translation.md  video.md
docs/public/: .gitkeep  README.md  latest.json  robots.txt
pixwit-web/.vitepress/: config.ts
resources/: app.rc  resource.h
scripts/: build.bat  cleanup_build.bat  cleanup_dist.bat  deploy.bat  generate_checksums.bat  installer.iss  kill_capstep.bat  release.bat
src/: GlobalHotkey.cpp  GlobalHotkey.h  MainWindow.cpp  MainWindow.h  RegionSelector.cpp  RegionSelector.h  ScreenshotEditWindow.cpp  ScreenshotEditWindow.h  ScreenshotTool.cpp  ScreenshotTool.h  StickyNoteWindow.cpp  StickyNoteWindow.h  StylePopover.cpp  StylePopover.h  UpdateChecker.cpp  UpdateChecker.h  WindowDetector.cpp  WindowDetector.h  main_modular.cpp
